Fix ugly scrollbar (resolves #26)

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,8 +1,7 @@
 .home-content {
-  .scroll {
-    height: 100%;
+  &.center {
+    display: block;
   }
-  .scroll,
   .module-content {
     width: 100%;
   }
